customer signup feature

--- a/app/views/customer_registrations/login.html.erb
+++ b/app/views/customer_registrations/login.html.erb
@@ -2,6 +2,6 @@
 
 <%= form_tag( '/customer_registrations', :method => :post) do %>
   <%= label_tag  :email %>
-  <%= text_field_tag :uuid %>
-  <%= submit_tag 'Sign-Up' %>
+  <%= text_field_tag :email %>
+  <%= submit_tag 'Login or SignUp' %>
 <% end %> 
